--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XYZ - Powering the inovation of Blockchain-Technology-</title>
-    <link rel="stylesheet" href="CSS/part-a.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- <link rel="stylesheet" href="CSS/part-b.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <script src="https://kit.fontawesome.com/0b636f9611.js" crossorigin="anonymous"></script>
